RESOLVED FIXED287525
[visionOS] Fix the drag preview of the <model> element
https://bugs.webkit.org/show_bug.cgi?id=287525
Summary [visionOS] Fix the drag preview of the <model> element
Ada Chan
Reported 2025-02-11 16:11:12 PST
[visionOS] Fix the drag preview of the <model> element
Attachments
Ada Chan
Comment 1 2025-02-11 16:11:13 PST
Ada Chan
Comment 2 2025-02-11 16:30:41 PST
EWS
Comment 3 2025-02-14 23:48:11 PST
Committed 290437@main (676b1c75b77e): <https://commits.webkit.org/290437@main> Reviewed commits have been landed. Closing PR #40446 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.