Source/WebCore/Modules/model-element/HTMLModelElement.h
@@ -94,6 +94,8 @@ public:
 
     std::optional<LayerHostingContextIdentifier> layerHostingContextIdentifier() const;
 
+    std::optional<PlatformLayerIdentifier> layerID() const;
+
 #if ENABLE(MODEL_PROCESS)
     RefPtr<ModelContext> modelContext() const;
 
@@ -173,7 +175,6 @@ private:
     void deleteModelPlayer();
 
     RefPtr<GraphicsLayer> graphicsLayer() const;
-    std::optional<PlatformLayerIdentifier> layerID() const;
 
     HTMLModelElement& readyPromiseResolve();
 
