Source/WebKit/UIProcess/ios/WKContentViewInteraction.h
@@ -965,6 +965,10 @@ FOR_EACH_PRIVATE_WKCONTENTVIEW_ACTION(DECLARE_WKCONTENTVIEW_ACTION_FOR_WEB_VIEW)
 
 @property (nonatomic, readonly) BOOL shouldUseAsyncInteractions;
 
+#if ENABLE(MODEL_PROCESS)
+- (void)_willInvalidateDraggedModelWithContainerView:(UIView *)containerView;
+#endif
+
 @end
 
 @interface WKContentView (WKTesting)
